@@ -1,140 +1,163 @@
-<?php $this->headScript()->captureStart('append','text/javascript') ?>
-	var grid_width = 940;
-	
-	$(document).ready(function() {
-		tableToGrid("#results_list", {
-			width:grid_width,
-			height:300,
-			rowNum: -1,
-			shrinkToFit:false
-		});
-		
-		<?php if(in_array("System Admin", $this->privilege)) { ?>
-		$("#confirm_container").html('<p class="warning">You are about to update all pricing for Office Depot. Click "Confirm Import" to continue.</p>');
-		
-		<?php } else if(in_array("Dealer Admin", $this->privilege)) { ?>
-		$("#confirm_container").html('<p class="warning">You are about to update all default pricing for Office Depot. Click "Confirm Import" to continue?</p>');
-		
-		<?php } else  { ?>
-		$("#confirm_container").html('<p class="warning">Your import will override the default pricing for Office Depot. Click "Confirm Import" to continue?</p>');
-		
-		<?php } ?>
-		
-		<?php if (isset($this->columnsArray) && isset($this->resultsArray)) { ?>
-			$("#company_filter").attr('disabled','disabled');
-		<?php } ?>
-		
-    });
+<?php $this->headScript()->captureStart('append', 'text/javascript') ?>
+var grid_width = 940;
 
-	function do_action(action) {
-		$("#message_container").html('');
-		
-		if(action == 'back') {
-			<?php if(in_array("System Admin", $this->privilege)) { ?>
-    		document.location.href = '<?php echo $this->baseUrl('/proposalgen/admin/bulkdevicepricing'); ?>';
-			<?php } else  { ?>
-    		document.location.href = '<?php echo $this->baseUrl('/proposalgen/admin/bulkuserpricing'); ?>';
-			<?php } ?>
-			
-		} else if(action == 'export_printer') {
-			document.location.href = "exportpricing?company="+$("#company_filter").val()+"&pricing=printer&hdnRole="+$("#hdnRole").val();
-			
-		} else if(action == 'export_toner') {
-			document.location.href = "exportpricing?company="+$("#company_filter").val()+"&pricing=toner&hdnRole="+$("#hdnRole").val();
-    		
-		} else if(action == 'confirm') {
-			$("#hdnAction").val('import');
-			$("#bulk").submit();
-		
-		} else if(action == 'upload') {
-			if($("#uploadedfile").val() == '') {
-				$("#message_container").html('<p>You must select a file to import. Please try again.</p>');
-				
-			} else {
-				$("#hdnAction").val('upload');
-				$("#bulk").submit();
-			}
-		} else if(action == 'cancel') {
-    		document.location.href = '<?php echo $this->baseUrl('/proposalgen/admin/bulkfilepricing'); ?>';
-		}
-	}
-	
+$(document).ready(function() {
+tableToGrid("#results_list", {
+width:grid_width,
+height:300,
+rowNum: -1,
+shrinkToFit:false
+});
+
+<?php if (in_array("System Admin", $this->privilege))
+{
+    ?>
+    $("#confirm_container").html('<p class="warning">You are about to update all pricing for Office Depot. Click "Confirm Import" to continue.</p>');
+
+<?php
+}
+else if (in_array("Dealer Admin", $this->privilege))
+{
+    ?>
+    $("#confirm_container").html('<p class="warning">You are about to update all default pricing for Office Depot. Click "Confirm Import" to continue?</p>');
+
+<?php
+}
+else
+{
+    ?>
+    $("#confirm_container").html('<p class="warning">Your import will override the default pricing for Office Depot. Click "Confirm Import" to continue?</p>');
+
+<?php } ?>
+
+<?php if (isset($this->columnsArray) && isset($this->resultsArray))
+{
+    ?>
+    $("#company_filter").attr('disabled','disabled');
+<?php } ?>
+
+});
+
+function do_action(action) {
+$("#message_container").html('');
+
+if(action == 'back') {
+<?php if (in_array("System Admin", $this->privilege))
+{
+    ?>
+    document.location.href = '<?php echo $this->baseUrl('/proposalgen/admin/bulkdevicepricing'); ?>';
+<?php
+}
+else
+{
+    ?>
+    document.location.href = '<?php echo $this->baseUrl('/proposalgen/admin/bulkuserpricing'); ?>';
+<?php } ?>
+
+} else if(action == 'export_printer') {
+document.location.href = "exportpricing?company="+$("#company_filter").val()+"&pricing=printer&hdnRole="+$("#hdnRole").val();
+
+} else if(action == 'export_toner') {
+if($("#manufacturerId").val() != 0){
+document.location.href = "exportpricing?manufacturerId="+$("#manufacturerId").val()+"&pricing=toner&hdnRole="+$("#hdnRole").val();
+}
+
+} else if(action == 'confirm') {
+$("#hdnAction").val('import');
+$("#bulk").submit();
+
+} else if(action == 'upload') {
+if($("#uploadedfile").val() == '') {
+$("#message_container").html('<p>You must select a file to import. Please try again.</p>');
+
+} else {
+$("#hdnAction").val('upload');
+$("#bulk").submit();
+}
+} else if(action == 'cancel') {
+document.location.href = '<?php echo $this->baseUrl('/proposalgen/admin/bulkfilepricing'); ?>';
+}
+}
+
 <?php $this->headScript()->captureEnd() ?>
 
-<h2><?php echo $this->title;?></h2>
+<h2><?php echo $this->title; ?></h2>
 
 <form name="bulk" id="bulk" action="" method="post" enctype="multipart/form-data">
-	<input type="hidden" name="hdnRole" id="hdnRole" value="<?php echo $this->hdnRole; ?>" />
-	<input type="hidden" name="hdnAction" id="hdnAction" value="" />
-	
-	<dl class="zend_form">
-		<dt class="botMenu">
-			
-			<div id="message_container" class="message_container">
-	        <?php
-	        if(isset($this->errMessages)) {
-	            //show the first error in the list of errors
-	            foreach($this->errMessages as $key => $value) {
-	                echo $value;
-	                break;
-	            }
-	        } else {
-	            if(isset($this->message)) {
-	                echo $this->message;
-	            }
-	        }
-	        ?>
-			</div>
-			
-			<div id="instruction_container">
-				<p>
-			       To update your pricing: <br><br>
-			       1) Download current pricing template by clicking the appropriate link below. <br>
-			       2) Modify the pricing columns in the template. You may edit <span style="color: red">pricing columns only.</span> <br>
-			       3) Import the modified pricing template back into the system.
-			    </p>
-			</div>
-			
-			<div id="filtered_container" style="height: 26px;">
-				<?php if(in_array("System Admin", $this->privilege)) { ?>
-				<!-- div id="filter_company" style="float: left; padding: 0px 20px 0px 0px;">
-					<label for="company_filter" class="label">Company:</label>
-					<select name="company_filter" id="company_filter" class="filter_dropdown" style="width: 200px;">
-						<?php /*
-						foreach($this->company_list as $key) {
-							echo "<option value='" . $key['dealer_company_id'] ."'";
-							if ($key['dealer_company_id'] == $this->company_filter) {
-								echo " selected";
-							}
-							echo ">" . ucwords(strtolower($key['company_name'])) . "</option>";
-						} */
-						?>
-					</select>
-				</div -->
-				<input type="hidden" name="company_filter" id="company_filter" value="1" />
-				
-				<?php } else { ?>
-				<div id="filter_company" style="float: left; padding: 5px 20px 0px 0px;">
-					<label for="company_filter" class="label">Company:</label> <?php echo $this->company_name; ?>
-					<input type="hidden" name="company_filter" id="company_filter" value="<?php echo $this->company_filter; ?>" />
-				</div>
-				<?php } ?>
-				
-				<div id="export_container" style="float: right; padding: 5px 5px 0px 0px;">
-					<span style="padding: 0px 10px 0px 0px;"><a href="javascript: void(0);" onclick="javascript: do_action('export_printer');">Export Printer Service Pricing</a></span> |
-					<span style="padding: 0px 0px 0px 10px;"><a href="javascript: void(0);" onclick="javascript: do_action('export_toner');">Export Toner Pricing</a></span>
-				</div>
-			</div>
-			
-            <div id="upload_container" class="well">
-                <div>Choose a <span style="color: red">.CSV</span> file to upload: <input type="file" name="uploadedfile" id="uploadedfile" accept="application/csv, text/csv" size="60" class="upload_file" /></div>
-                <div><input type="button" name="btnUpload" id="btnUpload" value="Import Pricing" onclick="javascript: do_action('upload');" class="btn" /></div>
-            </div>
+    <input type="hidden" name="hdnRole" id="hdnRole" value="<?php echo $this->hdnRole; ?>" />
+    <input type="hidden" name="hdnAction" id="hdnAction" value="" />
 
-			<div id="buttons_container" class="top-margined margined clear_center">
-				<input type="button" name="btnBack" id="btnBack" value="Done" onclick="javascript: do_action('back');" class="btn" />
-			</div>
-			
-		</dt>
-	</dl>
+    <dl class="zend_form">
+        <dt class="botMenu">
+
+        <div id="message_container" class="message_container">
+            <?php
+            if (isset($this->errMessages))
+            {
+                //show the first error in the list of errors
+                foreach ($this->errMessages as $key => $value)
+                {
+                    echo $value;
+                    break;
+                }
+            }
+            else
+            {
+                if (isset($this->message))
+                {
+                    echo $this->message;
+                }
+            }
+            ?>
+        </div>
+
+        <div id="instruction_container">
+            <p>
+                To update your pricing: <br><br>
+                1) Download current pricing template by clicking the appropriate link below. <br>
+                2) Modify the pricing columns in the template. You may edit <span style="color: red">pricing columns only.</span> <br>
+                3) Import the modified pricing template back into the system.
+            </p>
+        </div>
+
+        <div id="filtered_container" style="height: 26px;">
+            <?php if (in_array("System Admin", $this->privilege)) : ?>
+                <input type="hidden" name="company_filter" id="company_filter" value="1" />
+            <?php else : ?>
+                <div id="filter_company" style="float: left; padding: 5px 20px 0px 0px;">
+                    <label for="company_filter" class="label">Company:</label> <?php echo $this->company_name; ?>
+                    <input type="hidden" name="company_filter" id="company_filter" value="<?php echo $this->company_filter; ?>" />
+                </div>
+            <?php endif; ?>
+
+            <div id="export_container" style="float: right; padding: 5px 5px 0px 0px;">
+                <span style="padding: 0 10px 0 0;"><a href="javascript: void(0);" onclick="javascript: do_action('export_printer');">Export Printer
+                        Service Pricing</a></span> |
+                <span style="padding: 0 10px;"><a href="javascript: void(0);" onclick="javascript: do_action('export_toner');">Export Toner
+                        Pricing</a></span> |
+                <span style='padding: 0 10px;'>
+                    <select id="manufacturerId" onchange="do_action('export_toner')">
+                        <option value='0'> Export toner by manufacturer</option>
+                        <?php /* @var $tonerManufacturer Proposalgen_Model_TonerVendorManufacturer */ ?>
+                        <?php foreach ($this->tonerManufacturers as $tonerManufacturer) : ?>
+                            <option value='<?php echo $tonerManufacturer->manufacturerId ?>'> <?php echo $tonerManufacturer->getManufacturerName() ?></option>
+                        <?php endforeach; ?>
+                    </select>
+                </span>
+            </div>
+        </div>
+        <br />
+
+        <div id="upload_container" class="well">
+            <div>Choose a <span style="color: red">.CSV</span> file to upload:
+                <input type="file" name="uploadedfile" id="uploadedfile" accept="application/csv, text/csv" size="60" class="upload_file" /></div>
+            <div><input type="button" name="btnUpload" id="btnUpload" value="Import Pricing" onclick="javascript: do_action('upload');" class="btn" /></div>
+        </div>
+
+        <div id="buttons_container" class="top-margined margined clear_center">
+            <input type="button" name="btnBack" id="btnBack" value="Done" onclick="javascript: do_action('back');" class="btn" />
+        </div>
+
+        </dt>
+    </dl>
 </form>
