@@ -9,7 +9,8 @@ Upcoming Changes
 [ADDED]   Added the ability to add names to the reports
 [ADDED]   Added the ability for users to create manufacturers.
 [ADDED]   Added the ability for Master Device Administrators to edit manufacturers.
-[CHANGED] Changed look and feel of form / buttons to be more uniform across the appication.
+[ADDED]   Added the ability to filter toner exports by manufacturer
+[CHANGED] Changed look and feel of form / buttons to be more uniform across the application
 [CHANGED] Mapping no longer closes modal after saving.
 [FIXED]   The ability to save user profiles
 [FIXED]   Quote settings form multiselect width bug
